# quick-builder

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  lints.yml  tests.yml
quick-builder/: Cargo.toml  Readme.md
quick-builder-derive/: Cargo.toml  Readme.md
quick-builder-derive/src/: builder.rs  builder_state.rs  detail.rs  error.rs  lib.rs  validation.rs
quick-builder-derive/src/builder/: special_generics.rs
quick-builder-derive/tests/: compilation_tests.rs  test.rs  with_invariants.rs  without_invariants.rs
quick-builder-derive/tests/fail/: finished_struct_ident_forbidden_in_closure.rs  finished_struct_ident_forbidden_in_closure.stderr  self_keyword_forbidden_in_closure.rs  self_keyword_forbidden_in_closure.stderr  simple_builder_calls_build_too_early1.rs  simple_builder_calls_build_too_early1.stderr  simple_builder_calls_build_too_early2.rs  simple_builder_calls_build_too_early2.stderr
quick-builder-derive/tests/pass/: simple_builder.rs
quick-builder/src/: lib.rs
quick-builder/tests/: tests.rs
