[package]
name = "quick-builder-derive"
version = "0.1.0"
edition = "2021"
authors = ["geo-ant"]
license = "MIT"
homepage = "https://github.com/geo-ant/quick-builder"
repository = "https://github.com/geo-ant/quick-builder"
description = "derive macros for the quick-builder crate"
readme = "Readme.md"
keywords = ["builder"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = {version="2.0",features=["parsing","full","clone-impls","visit"]}

[dev-dependencies]
trybuild = "1.0"
